need to make table nice and organized, renamed some variables for clarity

--- a/style.css
+++ b/style.css
@@ -1,7 +1,39 @@
 body {
-  background-color: rgb(100, 100, 211);
+  background-color: rgb(40, 112, 44);
 }
 
-#backgroundColor {
-  background-color: red;
+#table {
+  width: 100%;
+  border-width: thick;
+  border-radius: 10px;
+  border-style: dotted;
+}
+
+#table,
+#th1,
+#th2,
+#th3,
+#th4,
+#th5,
+#th6 {
+  margin: 15px;
+  border-width: thin;
+  background-color: rgb(212, 230, 52);
+  border-style: solid;
+}
+#form,
+#fname,
+#lname,
+#idNum,
+#jobTitle,
+#annualSal {
+  margin: 8px;
+}
+
+.flex-container {
+  display: flex;
+  margin: 30px;
+}
+#monthly {
+  width: fit-content;
 }
